syntax = "proto3";
package quota_api;
option go_package = "./quota/api";


service ObjectService {
  rpc PreUpload (PreUploadObjectReq) returns (PreUploadObjectRes);
}

message PreUploadObjectReq{
  // @inject_tag: json:"key"
  string Key = 1;
  // @inject_tag: json:"user_id"
  string UserID = 2;
  // @inject_tag: json:"size"
  int64 Size = 3;
}

message PreUploadObjectRes{
  // @inject_tag: json:"key"
  string Key = 1;
  // @inject_tag: json:"user_id"
  string UserID = 2;
  // @inject_tag: json:"upload_id"
  string UploadID = 3;
}

